added more testing cases and made it run specific testing cases via main program input parameters