@@ -81,20 +81,6 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <includes>
-            <include>**/*Test*.java</include>
-          </includes>
-          <argLine>
-            -Djava.security.manager -Djava.security.policy=src/test/resources/java.policy
-            -Dlog4j.configurationFile=src/test/resources/log4j2.properties
-            -Des.set.netty.runtime.available.processors=false -Dtests.security.manager=false
-          </argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <executions>
           <execution>
